--- a/vista/bento.html
+++ b/vista/bento.html
@@ -1,56 +1,75 @@
 <!DOCTYPE html>
-<style>
-    h1 {
-        margin-left: 100px;
-        /* Margen a la izquierda del título */
-        color: #333; /* Color del texto */
-    }
-    ul {
-        list-style-type: none; /* Quitar viñetas de la lista */
-        padding: 0; /* Eliminar padding */
-        margin-left: 100px;
-    }
-    li {
-        background-color: #f0f0f0; /* Color de fondo de cada actividad */
-        margin: 5px 0; /* Margen vertical entre actividades */
-        padding: 10px; /* Espacio interior de cada actividad */
-        border-radius: 5px; /* Bordes redondeados */
-    }
-</style>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <title>FamilyRoots/bento</title>
+    <title>Listado de actividades</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            color: #333;
+        }
+        .actividad {
+            background: white;
+            padding: 15px;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            margin-bottom: 20px;
+        }
+        .actividad h2 {
+            margin: 0 0 10px;
+            color: #007BFF;
+        }
+        .actividad p {
+            margin: 5px 0;
+        }
+    </style>
 </head>
 <body>
-    <nav>
-        <div id="logo-nav">
-            <img src="img/fondosLogos/logo.png" alt="logoFamilyRoots">
-        </div>
-        <div class="navigator">
-            <a class="link-navigator" href="profile.html">Perfil</a>
-            <a class="current-page" href="bento.html">Actividades</a>
-            <a class="link-navigator" href="album.html">Álbum Fotográfico</a>
-            <a class="link-navigator" href="suport.html">Soporte</a>
-        </div>
-        <a href="../controlador/logout.php" class="button-nav"><i class="bi bi-box-arrow-right"></i></a>
-    </nav>
-    <main id="bento">
-        <div class="family-cont">
-            <div class="controls" id="activity">
-                <h1 style="margin-left:100px";>Listado de Actividades</h1>
-                <ul id="listaActividades">
-                </ul>
-            </div>
-            <div class="cards-cont"></div>
-        </div>
-    </main>
-    <footer>
-        <p>© 2024 FamilyRoots. Todos los derechos reservados.</p>
-    </footer>
-    <script src="js/bento.js"></script>
+
+<h1>Detalle de Actividades</h1>
+<div id="actividades-container"></div>
+
+<script>
+    // Función para obtener actividades desde el controlador
+    async function fetchActividades() {
+        try {
+            console.log("u");
+            const response = await fetch('../controlador/get_actividades.php');
+            if (!response.ok) {
+                throw new Error('Network response was not ok');
+            }
+            const actividades = await response.json();
+            displayActividades(actividades);
+        } catch (error) {
+            console.error('Hubo un problema con la petición Fetch:', error);
+        }
+    }
+
+    // Función para mostrar las actividades en el HTML
+    function displayActividades(actividades) {
+        const container = document.getElementById('actividades-container');
+        container.innerHTML = ''; // Limpiar el contenedor antes de agregar nuevas actividades
+
+        actividades.forEach(actividad => {
+            const actividadDiv = document.createElement('div');
+            actividadDiv.classList.add('actividad');
+            actividadDiv.innerHTML = `
+                    <h2>${actividad.nombre}</h2>
+                    <p><strong>Lugar:</strong> ${actividad.lugar}</p>
+                    <p><strong>Cooperativa:</strong> ${actividad.cooperativa}</p>
+                    <p><strong>Fecha:</strong> 09/10/25</p>
+                `;
+            container.appendChild(actividadDiv);
+        });
+    }
+
+    // Llamar a la función para obtener actividades al cargar la página
+    fetchActividades();
+</script>
 </body>
 </html>
