--- a/vista/album.html
+++ b/vista/album.html
@@ -41,7 +41,7 @@
         </form>
     </main>
     <footer>
-        <p>© 2024 FamilyRoots. Todos los derechos reservados.</p>
+        <p>© 2024 FamilyRoots. Todos los derechos reservados</p>
     </footer>
     <script src="js/album.js"></script>
 </body>
