Rama funcional + importsql

--- a/vista/login.html
+++ b/vista/login.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <div id="logo-nav">
-                <img src="img/fondosLogos/logo.png" alt="logoFamilyRoots">
+                <img src="img/fondosLogos/SembrandoCom3.png" style="height: 150px; width: auto;" alt="logoFamilyRoots">
             </div>
         </nav>
     </header>
@@ -19,8 +19,8 @@
 
         </div>
         <div class="central-column" id="margin-bot">
-            <img id="logoCentral" src="img/fondosLogos/logoCentral.png" alt="logoCentral">
-            <p class="message">Bienvenido, tu árbol genealógico te espera.</p>
+            <img id="logoCentral" src="img/fondosLogos/logoCentral.png"  style = 'margin-bottom : -70px' alt="logoCentral">
+            <p class="message">Empezar a formar parte del verde.</p>
         </div>
         <div class="right-column">
             <form action="../controlador/login.php" class="login-form" method="post">
