--- a/vista/profile.html
+++ b/vista/profile.html
@@ -11,7 +11,7 @@
 <body>
     <nav>
         <div id="logo-nav">
-            <img src="img/fondosLogos/logo.png" alt="logoFamilyRoots">
+            <img src="img/fondosLogos/SembrandoCom3.png" style="height: 150px; width: auto;" alt="logoFamilyRoots">
         </div>
         <div class="navigator">
             <a class="current-page" href="profile.html">Perfil</a>
