--- a/vista/index.html
+++ b/vista/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>FamilyRoots/home</title>
+    <title>SembrandoCom/home</title>
 </head>
 <body>
     <header>
         <nav>
-            <div id="logo-nav">
+            <div id="çlogo-nav">
                 <img src="img/fondosLogos/logo.png" alt="logoFamilyRoots">
             </div>
         </nav>
