--- a/vista/register.html
+++ b/vista/register.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FamilyRoots/register</title>
+    <title>SembrandoCom/register</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <nav>
             <div id="logo-nav">
-                <img src="img/fondosLogos/logo.png" alt="logoFamilyRoots">
+                <img src="img/fondosLogos/SembrandoCom3.png" style="height: 150px; width: auto;" alt="logoFamilyRoots">
             </div>
         </nav>
     </header>
@@ -19,8 +19,8 @@
 
         </div>
         <div class="central-column" id="margin-bot">
-            <img id="logoCentral" src="img/fondosLogos/logoCentral.png" alt="logoCentral">
-            <p class="message">Regístrate para empezar a crear tu árbol genealógico.</p>
+            <img id="logoCentral" src="img/fondosLogos/logoCentral.png" style = 'margin-bottom : -70px' alt="logoCentral">
+            <p class="message">Empezar a formar parte del verde.</p>
         </div>
         <div class="right-column">
             <form action="../controlador/register.php" method="post" class="login-form">
@@ -52,7 +52,7 @@
         </div>
     </main>
     <footer>
-        <p>© 2024 FamilyRoots. Todos los derechos reservados.</p>
+        <p>© 2024 SembrandoCom. Todos los derechos reservados.</p>
     </footer>
     <script src="js/login.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
