Clean Project and funcional

--- a/vista/suport.html
+++ b/vista/suport.html
@@ -15,7 +15,7 @@
             </div>
             <div class="navigator">
                 <a class="link-navigator" href="profile.html">Perfil</a>
-                <a class="link-navigator" href="bento.html">Familia</a>
+                <a class="link-navigator" href="actividades.html">Actividades</a>
                 <a class="link-navigator" href="album.html">Álbum Fotográfico</a>
                 <a class="current-page" href="suport.html">Soporte</a>
             </div>
