--- a/vista/profile.html
+++ b/vista/profile.html
@@ -15,7 +15,7 @@
         </div>
         <div class="navigator">
             <a class="current-page" href="profile.html">Perfil</a>
-            <a class="link-navigator" href="bento.html">Familia</a>
+            <a class="link-navigator" href="actividades.html">Actividades</a>
             <a class="link-navigator" href="album.html">Álbum Fotográfico</a>
             <a class="link-navigator" href="suport.html">Soporte</a>
         </div>
