vistas oscar con rutas modificadas

--- a/vista/Ayuda.html
+++ b/vista/Ayuda.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda - Sembrando Comunidad</title>
-    <link rel="stylesheet" href="../css/styles_oscar.css">
+    <link rel="stylesheet" href="../vista/css/styles_oscar.css">
 
 </head>
 
@@ -111,8 +111,8 @@
     </main>
 
     <!--Incluimos los archivos JavaScript-->
-    <script src="../script_ayuda.js"></script>
-    <script src="../header-footer.js"></script>
+    <script src="../vista/js/script_ayuda.js"></script>
+    <script src="../vista/js/header_footer.js"></script>
 
 
 </body>
