--- a/vista/Mi suscripción.html
+++ b/vista/Mi suscripción.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi suscripción - Sembrando Comunidad</title>
-    <link rel="stylesheet" href="../css/styles_oscar.css">
+    <link rel="stylesheet" href="../vista/css/styles_oscar.css">
   
 
 </head>
@@ -99,7 +99,7 @@
     </main>
 
     <!--Incluimos los archivos JavaScript-->
-    <script src="../script_suscripcion.js"></script>
-    <script src="../header-footer.js"></script>
+    <script src="../vista/js/script_suscripcion.js"></script>
+    <script src="../vista/js/header_footer.js"></script>
 </body>
 </html>
