cambios Óscar páginas zonas verdes y mis actividades

--- a/vista/Ayuda.html
+++ b/vista/Ayuda.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ayuda - Sembrando Comunidad</title>
     <link rel="stylesheet" href="../vista/css/styles_oscar.css">
+    <link rel="stylesheet" href="../vista/css/styles header-footer.css">
 
 </head>
 
@@ -16,7 +17,7 @@
 
         <!--Sección ayuda-->
         <section class="ayuda">
-            <h2>Ayuda</h2>
+            <h2>AYUDA</h2>
 
             <div id="ayuda-container">
                 <div class="faq-container">
