--- a/vista/blog.html
+++ b/vista/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Sembrando Comunidad</title>
+    <link rel="stylesheet" href="../vista/css/styles header-footer.css">
     <link rel="stylesheet" href="../vista/css/styles lucia.css">
 
 </head>
@@ -83,6 +84,6 @@
 
         <div id="footer-placeholder"></div>
     </main>
-<script src="../vista/js/header_footer.js"></script>
+    <script src="../vista/js/header_footer.js"></script>
 </body>
 </html>
