--- a/vista/header.html
+++ b/vista/header.html
@@ -1,15 +1,21 @@
 <nav class="navbar">
     <div class="logo">
-        <img src="../vista/img/imagenes/logo.png" alt="Logo Sembrando Comunidad">
+        <a href="principalusuario.html">
+            <img src="../vista/img/imagenes/logo.png" alt="Logo Sembrando Comunidad">
+        </a>
         <div class="logo-text">
             <h1>Sembrando Comunidad</h1>
             <p>Volver a las raíces</p>
         </div>
     </div>
     <ul class="menu">
-        <li><a href="perfil.html">Mi perfil</a></li>
-        <li><a href="conecta.html">Conecta</a></li>
-        <li><a href="eventos.html">Eventos</a></li>
+        <li><a href="principalusuario.html">Mi perfil</a>
+            <ul>
+                <li><a href="miSuscripcion.html">Mi suscripción</a></li>
+            </ul>
+        </li>
+        <li><a href="misActividades.html">Mis actividades</a></li>
+        <li><a href="zonasVerdes.html">Zonas verdes</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="ayuda.html">Ayuda</a></li>
     </ul>
