--- a/vista/principalcooperativas.html
+++ b/vista/principalcooperativas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Cooperativa - Sembrando Comunidad</title>
     <link rel="stylesheet" href="../vista/css/styles lucia.css">
+    <link rel="stylesheet" href="../vista/css/styles header-footer.css">
 </head>
 <body>
 
@@ -26,16 +27,16 @@
         <section class="contenedor-principal">
             <!-- Mis Tareas -->
             <div class="mis-tareas">
-                <h2>Mis tareas</h2>
+                <h2>Mis actividades</h2>
                 <div class="tarea">
-                    <p><strong>Tarea</strong></p>
+                    <p><strong>Actividades</strong></p>
                     <p>Fecha</p>
                     <p>Nº voluntarios/as inscritos</p>
                     <button class="btn-tarea">Marcar como cubierta</button>
                     <button class="btn-tarea">Gestionar</button>
                 </div>
                 <div class="tarea">
-                    <p><strong>Tarea</strong></p>
+                    <p><strong>Actividad</strong></p>
                     <p>Fecha</p>
                     <p>Nº voluntarios/as inscritos</p>
                     <button class="btn-tarea">Marcar como cubierta</button>
@@ -45,7 +46,7 @@
 
             <!-- Añadir nueva tarea -->
             <div class="nueva-tarea">
-                <h2>Añadir nueva tarea</h2>
+                <h2>Añadir nueva actividad</h2>
                 <form>
                     <input type="text" placeholder="Título tarea" required>
                     <input type="date" placeholder="Fecha" required>
