--- a/vista/register.html
+++ b/vista/register.html
@@ -20,7 +20,7 @@
         </div>
         <div class="central-column" id="margin-bot">
             <img id="logoCentral" src="img/fondosLogos/logoCentral.png" style = 'margin-bottom : -70px' alt="logoCentral">
-            <p class="message">Empezar a formar parte del verde.</p>
+            <p class="message">Empieza a formar parte del verde.</p>
         </div>
         <div class="right-column">
             <form action="../controlador/register.php" method="post" class="login-form">
