--- a/vista/articuloBlog.html
+++ b/vista/articuloBlog.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Artículo - Sembrando Comunidad</title>
     <link rel="stylesheet" href="../vista/css/styles lucia.css">
+    <link rel="stylesheet" href="../vista/css/styles header-footer.css">
 </head>
 <body>
 
