modificaciones principal cooperativa lucia

--- a/vista/principalcooperativas.html
+++ b/vista/principalcooperativas.html
@@ -17,7 +17,7 @@
         <section class="principal-cooperativa">
             <h1>MI COOPERATIVA</h1>
             <div class="info-cooperativa">
-                <img src="../vista/img/imagenes/cooperativa-placeholder.png" alt="Imagen cooperativa">
+                <!-- <img src="../vista/img/imagenes/cooperativa-placeholder.png" alt="Imagen cooperativa">-->
                 <p>Nombre cooperativa</p>
                 <a href="perfil.html">Mi perfil</a> | <a href="logout.html">Cerrar sesión</a>
             </div>
@@ -57,13 +57,13 @@
                 </form>
             </div>
 
-            <!-- Mi calendario de tareas -->
+            <!-- Mi calendario de tareas
             <div class="mi-calendario">
                 <h2>Mi calendario de tareas</h2>
                 <img src="../imagenes/calendario-placeholder.png" alt="Calendario de tareas">
             </div>
 
-            <!-- Solicitudes -->
+             Solicitudes 
             <div class="solicitudes">
                 <h2>Solicitudes</h2>
                 <ul>
@@ -74,7 +74,7 @@
                 </ul>
             </div>
 
-            <!-- Nuevo mensaje -->
+             Nuevo mensaje 
             <div class="nuevo-mensaje">
                 <h2>Nuevo mensaje</h2>
                 <form>
@@ -85,7 +85,7 @@
                 </form>
             </div>
 
-            <!-- Gestión de voluntarios -->
+            Gestión de voluntarios 
             <div class="gestion-voluntarios">
                 <h2>Gestión voluntarios/as</h2>
                 <div class="filtro">
@@ -106,11 +106,11 @@
                 </div>
             </div>
         </section>
-    </main>
+    </main>-->
 
     <!-- Footer cargado dinámicamente -->
     <div id="footer-placeholder"></div>
 
-    <script src="../vista/js/header_footer.js"></script>
+    <script src="../vista/js/header_footer_coop.js"></script>
 </body>
 </html>
