--- a/vista/principalcooperativas.html
+++ b/vista/principalcooperativas.html
@@ -15,12 +15,31 @@
     <main>
         <!-- Título de la sección -->
         <section class="principal-cooperativa">
-            <h1>MI COOPERATIVA</h1>
+            <main class="main-perfil-usuario">
+                <!-- Contenedor de dos columnas -->
+                <div class="contenedor-dos-columnas">
+                <!-- Sección de información del usuario -->
+                <section class="seccion-usuario">
+                    <div class="usuario-info">
+                        <img src="../vista/img/imagenes/perfil-placeholder.png" alt="Foto de perfil" class="foto-perfil">
+                        <p>@username</p>
+                        <p>Pequeño texto de introducción del usuario</p>
+                    </div>
+                </section>
+                    <section class="seccion-usuario">
+                    <div class="usuario-opciones">
+                        <button class="btn-opcion">Historial de participación</button>
+                        <button class="btn-opcion">Ajustes</button>
+                        <button class="btn-opcion">Información de usuario</button>
+                    </div>
+                </section>
+                </div>
+            <!--<h1>MI COOPERATIVA</h1>
             <div class="info-cooperativa">
-                <!-- <img src="../vista/img/imagenes/cooperativa-placeholder.png" alt="Imagen cooperativa">-->
+                 <img src="../vista/img/imagenes/cooperativa-placeholder.png" alt="Imagen cooperativa">
                 <p>Nombre cooperativa</p>
                 <a href="perfil.html">Mi perfil</a> | <a href="logout.html">Cerrar sesión</a>
-            </div>
+            </div>-->
         </section>
 
         <!-- Sección principal con las tareas y solicitudes -->
