style headr footer cooperativa lucia

--- a/vista/header_cooperativas.html
+++ b/vista/header_cooperativas.html
@@ -9,11 +9,7 @@
         </div>
     </div>
     <ul class="menu">
-        <li><a href="principalusuario.html">Mi perfil</a>
-            <ul>
-                <li><a href="miSuscripcion.html">Mi suscripción</a></li>
-            </ul>
-        </li>
+        <li><a href="principalcooperativas.html">Perfil Cooperativa</a></li>
         <li><a href="actividades_cooperativas.html">Mis actividades</a></li>
         <li><a href="zonasVerdes.html">Zonas verdes</a></li>
         <li><a href="blog.html">Blog</a></li>
