actividades cooperativa lucia

--- a/vista/actividades_cooperativas.html
+++ b/vista/actividades_cooperativas.html
@@ -15,7 +15,7 @@
         <!-- Columna izquierda: Crear actividad -->
         <section class="crear-actividad">
             <h2>Crear Actividad</h2>
-            <form id="form-crear-actividad">
+            <form form action="../controlador/crear_actividad.php   " id="form-crear-actividad" method="post" >
                 <input type="text" placeholder="Nombre de la actividad" required>
                 <textarea placeholder="Descripción de la actividad" required></textarea>
                 <input type="text" placeholder="Dirección" required>
