cambio estilo index

--- a/vista/header.html
+++ b/vista/header.html
@@ -14,7 +14,7 @@
                 <li><a href="miSuscripcion.html">Mi suscripción</a></li>
             </ul>
         </li>
-        <li><a href="misActividades.html">Mis actividades</a></li>
+        <li><a href="misActividades.html">Actividades</a></li>
         <li><a href="zonasVerdes.html">Zonas verdes</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="ayuda.html">Ayuda</a></li>
