--- a/vista/footer.html
+++ b/vista/footer.html
@@ -18,4 +18,5 @@
             <div class="icon"></div>
         </div>
     </div>
+    <p><i>© 2024 SembrandoComunidad. Todos los derechos reservados.</i></p>
 </footer>
