Victor : parfte mi perfil / mis actividades completed

--- a/vista/header_cooperativas.html
+++ b/vista/header_cooperativas.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
     <div class="logo">
-        <a href="principalusuario.html">
+        <a href="principalusuario.php">
             <img src="../vista/img/imagenes/logo.png" alt="Logo Sembrando Comunidad">
         </a>
         <div class="logo-text">
@@ -10,6 +10,11 @@
     </div>
     <ul class="menu">
         <li><a href="principalcooperativas.html">Perfil Cooperativa</a></li>
+        <li><a href="principalusuario.php">Mi perfil</a>
+            <ul>
+                <li><a href="miSuscripcion.html">Mi suscripción</a></li>
+            </ul>
+        </li>
         <li><a href="actividades_cooperativas.html">Mis actividades</a></li>
         <li><a href="zonasVerdes.html">Zonas verdes</a></li>
         <li><a href="blog.html">Blog</a></li>
