--- a/vista/header.html
+++ b/vista/header.html
@@ -19,5 +19,6 @@
         <li><a href="zonasVerdes.html">Zonas verdes</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="ayuda.html">Ayuda</a></li>
+        <li><a href="../controlador/logout.php">Logout</a></li>
     </ul>
 </nav>
