--- a/vista/huertos_cooperativas.html
+++ b/vista/huertos_cooperativas.html
@@ -18,7 +18,6 @@
             <form id="form-crear-huerto" action="../controlador/crear_huerto.php" method="POST">
                 <input type="text" name="nombre" placeholder="Nombre del huerto" required>
                 <textarea name="direccion" placeholder="Dirección del huerto" required></textarea>
-                 <!--<input type="text" name="idMunicipio" placeholder="ID Municipio" required>  Esto puede ser dinámico, pero se deja por simplicidad -->
                 <input type="number" name="aforo" placeholder="Aforo del huerto" required>
                 
                 <!-- Campos adicionales requeridos por el script PHP -->
@@ -31,15 +30,7 @@
         <!-- Columna derecha: Mis Huertos -->
         <section class="mis-huertos">
             <h2>Mis Huertos</h2>
-            <div class="huerto">
-                <h3>Nombre del Huerto</h3>
-                <p>Dirección: Calle Ejemplo, 123</p>
-                <p><strong>Municipio ID:</strong> 2</p>
-                <p><strong>Aforo:</strong> 50</p>
-                <button class="btn-editar">Editar</button>
-                <button class="btn-eliminar">Eliminar</button>
-            </div>
-            <!-- Repetir bloque div.huerto para más huertos -->
+            <!-- Los huertos serán generados dinámicamente aquí -->
         </section>
     </main>
 
@@ -83,10 +74,54 @@
                     <p><strong>Municipio ID:</strong> ${huerto.idMunicipio}</p>
                     <p><strong>Aforo:</strong> ${huerto.aforo}</p>
                     <button class="btn-editar">Editar</button>
-                    <button class="btn-eliminar">Eliminar</button>
+                    <button class="btn-eliminar" data-id="${huerto.id}">Eliminar</button>
                 `;
                 container.appendChild(huertoDiv);
             });
+
+            // Añadir event listeners a los botones de eliminar después de agregar todos los huertos
+            const deleteButtons = document.querySelectorAll('.btn-eliminar');
+            deleteButtons.forEach(button => {
+                button.addEventListener('click', function() {
+                    const id = this.getAttribute('data-id');
+                    console.log("ID de Huerto a Eliminar:", id); // Log para verificar el ID
+                    eliminarHuerto(id);
+                });
+            });
+        }
+
+        // Función para eliminar un huerto
+        async function eliminarHuerto(id) {
+            if (!confirm("¿Estás seguro de que deseas eliminar este huerto?")) {
+                return; // Si el usuario cancela, no se ejecuta la eliminación
+            }
+
+            try {
+                const response = await fetch('../controlador/eliminar_huerto.php', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/x-www-form-urlencoded',
+                    },
+                    body: `id=${id}`
+                });
+
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const result = await response.json();
+
+                if (result.message) {
+                    alert(result.message);
+                    // Recargar los huertos para reflejar los cambios
+                    fetchHuertos(1); // Cambia por el idCooperativa correcto si es dinámico
+                } else if (result.error) {
+                    alert(result.error);
+                }
+            } catch (error) {
+                console.error('Hubo un problema con la petición Fetch:', error);
+                alert('Hubo un problema al eliminar el huerto. Por favor, intenta nuevamente.');
+            }
         }
 
         // Llamar a la función para obtener los huertos al cargar la página
