--- a/vista/zonasVerdes.html
+++ b/vista/zonasVerdes.html
@@ -59,7 +59,7 @@
             <button class="btn-mostrar-mas">Mostrar más</button>
         </section>
 
-        <!-- Sección de Mi Calendario y Mis Eventos -->
+        <!-- Sección de Mi Calendario y Mis Eventos 
         <section class="seccion-calendario">
             <div class="mi-calendario">
                 <h2>Mi calendario</h2>
@@ -83,7 +83,7 @@
                     <button class="btn-recordatorio">Añadir recordatorio</button>
                 </div>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!-- Footer cargado dinámicamente -->
