editar huertos lucia

--- a/vista/principalcooperativas.html
+++ b/vista/principalcooperativas.html
@@ -29,7 +29,7 @@
 
                     <div class="profile-info">
                         <h2>Descripción</h2>
-                        <textarea name="descripcion" rows="4" placeholder="Escribe una breve descripción sobre ti"></textarea>
+                        <textarea name="descripcion" rows="4" placeholder="Escribe una breve descripción sobre tu cooperativa"></textarea>
                     </div>
 
                     <div class="profile-footer">
@@ -44,8 +44,8 @@
         </section>
 
         <div class="contenedor-btns">
-            <a href="actividades_cooperativas.html" class="boton-actividades">Mis actividades</a>
-            <a href="zonasVerdes.html" class="boton-huertos">Gestionar mis huertos</a>
+            <a href="actividades_cooperativas.html" class="boton-actividades">Gestionar mis actividades</a>
+            <a href="huertos_cooperativas.html" class="boton-huertos">Gestionar mis huertos</a>
         </div>
 
         
