cambios index, login y register Oscar

--- a/vista/index.html
+++ b/vista/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="../vista/css/styles header-footer.css">
 </head>
 <body>
-    <header class="header">
-        <div class="logo">
+    <header class="header-index">
+        <div class="logo-index">
             <img src="img/imagenes/logo.png" alt="Logo Sembrando Comunidad">
         </div>
         <h1>Sembrando Comunidad</h1>
@@ -25,12 +25,8 @@
             </div>
         </div>
     </main>
-
     <footer>
-        <!-- Footer cargado dinámicamente -->
-            <div id="footer-placeholder"></div>
+        <p>© 2024 Sembrando Comunidad. Todos los derechos reservados.</p>
     </footer>
-    <!--<script src="js/login.js"></script>-->
-    <script src="../vista/js/header_footer.js"></script>
 </body>
 </html>
