--- a/vista/login.html
+++ b/vista/login.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles_oscar.css">
+    <link rel="stylesheet" href="../vista/css/styles header-footer.css">
     <title>Sembrando Comunidad - Login</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="header-container">
-                <div id="logo-nav" class="logo-container">
-                    <img src="img/imagenes/logo.png" alt="Logo Sembrando Comunidad" class="logo-nav-img">
-                </div>
-            </div>
-        </nav>
+    <header class="header-index">
+        <div class="logo-index">
+            <img src="img/imagenes/logo.png" alt="Logo Sembrando Comunidad">
+        </div>
+        <h1>Sembrando Comunidad</h1>
     </header>
 
     <main id="login">
