--- a/vista/register.html
+++ b/vista/register.html
@@ -4,17 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles_oscar.css">
+    <link rel="stylesheet" href="../vista/css/styles header-footer.css">
     <title>Sembrando Comunidad - Registro</title>
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="header-container">
-                <div id="logo-nav" class="logo-container">
-                    <img src="img/imagenes/logo.png" alt="Logo Sembrando Comunidad" class="logo-nav-img">
-                </div>
-            </div>
-        </nav>
+    <header class="header-index">
+        <div class="logo-index">
+            <img src="img/imagenes/logo.png" alt="Logo Sembrando Comunidad">
+        </div>
+        <h1>Sembrando Comunidad</h1>
     </header>
 
     <main id="register">
@@ -51,7 +49,7 @@
                     <hr class="hr-register">
                 </div>
                 <a id="btn-google" href="#">Regístrate con Google</a>
-                <p class="register-footer">¿Ya tienes una cuenta? <a class="link-sub" href="login.html">Inicia Sesión</a></p>
+                <p class="register-footer">¿Ya tienes una cuenta? <a class="login-link" href="login.html">Inicia sesión</a></p>
             </div>
         </div>
     </main>
