header cooperativas listo

--- a/vista/header_cooperativas.html
+++ b/vista/header_cooperativas.html
@@ -10,14 +10,8 @@
     </div>
     <ul class="menu">
         <li><a href="principalcooperativas.html">Perfil Cooperativa</a></li>
-        <li><a href="principalusuario.php">Mi perfil</a>
-            <ul>
-                <li><a href="miSuscripcion.html">Mi suscripción</a></li>
-            </ul>
-        </li>
-        <li><a href="actividades_cooperativas.html">Mis actividades</a></li>
-        <li><a href="zonasVerdes.html">Zonas verdes</a></li>
-        <li><a href="blog.html">Blog</a></li>
+        <li><a href="actividades_cooperativas.php">Mis actividades</a></li>
+        <li><a href="huertos_cooperativas.html">Mis Huertos</a></li>
         <li><a href="ayuda.html">Ayuda</a></li>
     </ul>
 </nav>
