Cambios estilos mi suscripcion, login y register

--- a/vista/register.html
+++ b/vista/register.html
@@ -27,17 +27,13 @@
                 <form action="../controlador/register.php" method="post" class="register-form">
                     <label class="label" for="nombre">Nombre</label>
                     <input type="text" name="nombre" id="nombre" class="input" placeholder="Albert Castro" required>
-        
                     <label class="label" for="fecha">Fecha de nacimiento</label>
                     <input type="date" name="fecha" id="fecha" class="input" required>
-
                     <label for="email" class="label">Correo electrónico</label>
                     <input type="email" name="email" id="email" class="input" placeholder="example@email.com" required>
-        
                     <label for="password" class="label">Contraseña</label>
                     <input type="password" name="password" id="password" class="input" placeholder="mínimo 8 caracteres" required>
-
-                    <label class="admin label">Registrarse como cooperativa
+                    <label class="admin-label">Registrarse como cooperativa
                         <input type="checkbox" name="admin" id="admin" class="checkbox">
                     </label>
 
