--- a/vista/miSuscripcion.html
+++ b/vista/miSuscripcion.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi suscripción - Sembrando Comunidad</title>
-    <link rel="stylesheet" href="../vista/css/styles_oscar.css">
+    <link rel="stylesheet" href="../vista/css/styles lucia.css">
     <link rel="stylesheet" href="../vista/css/styles header-footer.css">
   
 
@@ -14,9 +14,9 @@
     <div id="header-placeholder"></div>
 
     <main>
-        <!--Sección Mi suscripción-->    
+        <!--Sección Mi suscripción--> 
         <section class="mi-suscripcion">
-            <h2>Mi suscripción</h2>
+            <h2>Mi suscripción</h2>   
             <h4>Obtén acceso a contenido adicional y eventos exclusivos</h4><br>
                 
             <!-- Detalles de la Suscripción -->
@@ -81,8 +81,8 @@
                         <button type="submit" class="boton">Guardar Método de Pago</button>
                     </form>
                 </div>
-                <br>
-                
+            </div> 
+
             <!-- Gestión de la Suscripción -->
             <div class="gestion-suscripcion">
                 <h3>Gestión de la Suscripción</h3>
