--- a/vista/footer.html
+++ b/vista/footer.html
@@ -1,7 +1,7 @@
 <footer>
     <section class="newsletter-section">
         <h2>Suscríbete a nuestro Newsletter</h2>
-        <p>Lorem ipsum dolor sit amet. Aut mollitia fugiat et nihil molestias aut delectus voluptate.</p>
+        <p>Únete a la transformación de tu ciudad y no te pierdas ninguna novedad</p>
         <form>
             <input type="email" placeholder="Introduce tu correo">
             <button type="submit" class="subscribe-btn">Enviar</button>
