Move index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <p id="titulo" style = "background-color:white">PIENSA EN VERDE</p>
             <p id="subtitulo" style = "background-color:white">UNETE A LA TRANSFORMACION DE TU CIUDAD</p>
             <div class="center">
-                <a href="register.html" class="button" style = "background-color:black">Regístrate</a>
+                <a href="vista/register.html" class="button" style = "background-color:black">Regístrate</a>
                 <div class="separator">
                     <hr class="hr-login" style ="color:black;border-top:1px solid #000000">
                     <span style ="color:black">o</span>
